--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,21 @@
-*.swp
-*.swo
+*.bak
+*.old
+*.tmp
+*.tar.gz
+*.rej
+*.orig
 *~
-.build
-Net-FailOver-*
+/Build
+/Build.bat
+/Makefile
+/_build
+/blib
+/cover_db
+/pm_to_blib
+/PM_to_blib
+/META.yml
+/MYMETA.yml
+/*.tar.gz
+/Module-Build-*
+/LICENSE
+/README
